--- a/gui/package.json
+++ b/gui/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "nodemon": "^2.0.20",
     "sqlite3": "^5.1.2"
   }
 }
